plugins {
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id "checkstyle"
	id "com.github.spotbugs" version "6.1.12"
	id "io.freefair.lombok" version "8.13.1"
	id 'jacoco'
	id 'org.sonarqube' version '6.1.0.5360'

	// Mutation testing
	id 'info.solidsoft.pitest' version '1.15.0'
	id 'com.arcmutate.github' version '2.2.1'
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'checkstyle'
apply plugin: "com.github.spotbugs"
apply plugin: 'application'

mainClassName = ' uk.nhs.adaptors.gp2gp.Gp2gpApplication'

group = 'uk.nhs.adaptors'
sourceCompatibility = '21'

checkstyle {
	toolVersion '10.18.2'
	configDirectory = 'checkstyle' as File
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework:spring-jms'

	// Use version specified in spring-boot-starter-web
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// WebClient
	implementation ('org.springframework.boot:spring-boot-starter-webflux')

	// Logging
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	// Infrastructure
	implementation 'software.amazon.awssdk:s3:2.31.50'
	implementation ('com.azure:azure-storage-blob:12.30.0')
	implementation 'org.apache.qpid:qpid-jms-client:2.7.0'

	// Utils
	implementation 'org.apache.commons:commons-lang3:3.17.0'
	implementation 'javax.xml.soap:javax.xml.soap-api:1.4.0'
	implementation 'com.github.spullara.mustache.java:compiler:0.9.14'
	implementation 'org.apache.tika:tika-core:3.2.0'

	// Fhir
	implementation 'ca.uhn.hapi.fhir:hapi-fhir-structures-dstu3:7.6.1'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "org.assertj:assertj-core:3.27.3"
	testImplementation 'org.testcontainers:testcontainers:1.21.1'
	testImplementation 'org.awaitility:awaitility:4.3.0'
	testImplementation 'org.wiremock:wiremock-standalone:3.13.0'
	testImplementation 'com.squareup.okhttp3:okhttp:4.12.0'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	testImplementation 'io.findify:s3mock_2.13:0.2.6'

	pitest 'com.arcmutate:base:1.3.2'
	pitest 'com.arcmutate:pitest-git-plugin:2.1.0'
}

test {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.required = true
	}
	dependsOn test // tests are required to run before generating the report
}

sourceSets {
	integrationTest {
		java {
			compileClasspath += main.output + test.output
			runtimeClasspath += main.output + test.output
			srcDir file('src/intTest/java')
		}

		resources {
			srcDir file('src/intTest/resources')
		}
	}
}

task(interoperabilityTestingToolJsonToXml, dependsOn: 'classes', type: JavaExec) {
	mainClass.set('uk.nhs.adaptors.gp2gp.transformjsontoxmltool.TransformJsonToXml')
	classpath = sourceSets.main.runtimeClasspath
}

configurations {
	integrationTestCompileOnly.extendsFrom testCompileOnly
	integrationTestImplementation.extendsFrom testImplementation
	integrationTestRuntime.extendsFrom testRuntime
	integrationTestAnnotationProcessor.extendsFrom testAnnotationProcessor
}

task integrationTest(type: Test) {
	useJUnitPlatform() {
		description = 'Runs integration tests.'
		group = 'verification'

		testClassesDirs = sourceSets.integrationTest.output.classesDirs
		classpath = sourceSets.integrationTest.runtimeClasspath
		shouldRunAfter test
	}
}

tasks.withType(Test) {
	testLogging {
		events "passed", "skipped", "failed"
	}
}

check.dependsOn integrationTest

spotbugsTest.enabled = false
spotbugsIntegrationTest.enabled = false
spotbugsMain {
	reports {
		html {
			enabled = true
		}
		xml {
			enabled = true
		}
		excludeFilter.set(file("spotbugs/exclude.xml"))
	}
}

pitest {
	pitestVersion = '1.16.1'
	junit5PluginVersion = '1.2.1'
	outputFormats = ['gitci']

	// git feature limits analysis to contents of PR only
	features = ["+GIT(from[HEAD~1])"]

	// PRs which don't introduce any production code changes, shouldn't fail the Mutation Testing Actions Workflow
        failWhenNoMutations = false

	mutators = ['STRONGER', 'EXTENDED_ALL']

	threads = project.getGradle().getStartParameter().getMaxWorkerCount()
}

pitestGithub {
	deleteOldSummaries = true
}

sonar {
	properties {
		property("sonar.host.url", "https://sonarcloud.io")
		property("sonar.projectKey", "NHSDigital_integration-adaptor-gp2gp")
		property("sonar.organization", "nhsdigital")
		property("sonar.exclusions", "**/transformjsontoxmltool/*")
	}
}

bootJar {
	exclude("**/TransformJsonToXml*")
}

